@@ -24,7 +24,7 @@
 
     <modules>
         <RatePAY_Ratepaypayment>
-            <version>3.0.1</version>
+            <version>3.0.2</version>
         </RatePAY_Ratepaypayment>
     </modules>
 
@@ -148,14 +148,14 @@
                 </observers>
             </sales_quote_payment_import_data_before>
 
-            <sales_order_invoice_save_before>
+            <sales_order_invoice_register>
                 <observers>
                     <sendRatepayDeliverCallOnInvoice>
                         <class>ratepaypayment/observer</class>
                         <method>sendRatepayDeliverCallOnInvoice</method>
                     </sendRatepayDeliverCallOnInvoice>
                 </observers>
-            </sales_order_invoice_save_before>
+            </sales_order_invoice_register>
 
             <sales_order_shipment_save_before>
                 <observers>
@@ -372,47 +372,6 @@
             </updates>
         </layout>
 
-        <events>
-            <!--<sales_quote_payment_import_data_before>
-                <observers>
-                    <RatePAY_Ratepaypayment_model_observer>
-                        <type>model</type>
-                        <class>RatePAY_Ratepaypayment_Model_Observer</class>
-                        <method>handlePaymentFee</method>
-                    </RatePAY_Ratepaypayment_model_observer>
-                </observers>
-            </sales_quote_payment_import_data_before>
-
-            <checkout_onepage_controller_success_action>
-                <observers>
-                    <sendRatepayConfirmCall>
-                        <class>ratepaypayment/observer</class>
-                        <method>sendRatepayConfirmCall</method>
-                    </sendRatepayConfirmCall>
-                </observers>
-            </checkout_onepage_controller_success_action>
-
-            <checkout_controller_onepage_save_shipping_method>
-                <observers>
-                    <RatePAY_Ratepaypayment_model_observer>
-                        <type>model</type>
-                        <class>RatePAY_Ratepaypayment_Model_Observer</class>
-                        <method>paymentQuery</method>
-                    </RatePAY_Ratepaypayment_model_observer>
-                </observers>
-            </checkout_controller_onepage_save_shipping_method>
-
-            <controller_action_layout_load_before>
-                <observers>
-                    <RatePAY_Ratepaypayment_model_observer>
-                        <type>model</type>
-                        <class>RatePAY_Ratepaypayment_Model_Observer</class>
-                        <method>ratepay_cart</method>
-                    </RatePAY_Ratepaypayment_model_observer>
-                </observers>
-            </controller_action_layout_load_before>-->
-        </events>
-
         <translate>
             <modules>
                 <RatePAY_Ratepaypayment>
@@ -444,64 +403,6 @@
                 </ratepaypayment>
             </updates>
         </layout>
-
-        <events>
-            <!--<adminhtml_init_system_config>
-                <observers>
-                    <RatePAY_Ratepaypayment_model_observer>
-                        <class>paypal/observer</class>
-                        <method>loadConfigurationBy</method>
-                    </RatePAY_Ratepaypayment_model_observer>
-                </observers>
-            </adminhtml_init_system_config>-->
-
-            <!--<sales_quote_payment_import_data_before>
-                <observers>
-                    <handlePaymentFee>
-                        <type>model</type>
-                        <class>ratepaypayment/observer</class>
-                        <method>handlePaymentFee</method>
-                    </handlePaymentFee>
-                </observers>
-            </sales_quote_payment_import_data_before>
-
-            <sales_order_invoice_register>
-                <observers>
-                    <sendRatepayDeliverCallOnInvoice>
-                        <class>ratepaypayment/observer</class>
-                        <method>sendRatepayDeliverCallOnInvoice</method>
-                    </sendRatepayDeliverCallOnInvoice>
-                </observers>
-            </sales_order_invoice_register>
-
-            <sales_order_shipment_save_before>
-                <observers>
-                    <sendRatepayDeliverCallOnDelivery>
-                        <class>ratepaypayment/observer</class>
-                        <method>sendRatepayDeliverCallOnDelivery</method>
-                    </sendRatepayDeliverCallOnDelivery>
-                </observers>
-            </sales_order_shipment_save_before>
-
-            <sales_order_creditmemo_refund>
-                <observers>
-                    <sendRatepayCreditmemoCall>
-                        <class>ratepaypayment/observer</class>
-                        <method>sendRatepayCreditmemoCall</method>
-                    </sendRatepayCreditmemoCall>
-                </observers>
-            </sales_order_creditmemo_refund>
-
-            <order_cancel_after>
-                <observers>
-                    <sendRatepayCancelCall>
-                        <class>ratepaypayment/observer</class>
-                        <method>sendRatepayCancelCall</method>
-                    </sendRatepayCancelCall>
-                </observers>
-            </order_cancel_after>-->
-
-        </events>
 
     </adminhtml>
 
