@@ -1924,7 +1924,7 @@
                         </ratepay_austria>                        
                         
                         <version translate="label">
-                            <label>v3.0.1</label>
+                            <label>v3.0.2</label>
                             <frontend_model>adminhtml/system_config_form_field_notification</frontend_model>
                             <frontend_type>label</frontend_type>
                             <sort_order>100</sort_order>
