@@ -1,4 +1,10 @@
 ***********************************************************
+**********| Version 3.0.2 - Released 2015-05-13 |**********
+***********************************************************
+
+* changed invoice event from save to register
+
+***********************************************************
 **********| Version 3.0.1 - Released 2015-05-04 |**********
 ***********************************************************
 
